# proyecto-1

./: .gitignore  README.md  proyecto-1.py  pyproject.toml  setup.py
pkg/: PKGBUILD
proyecto_1/: image.py  main.py  svm.py  svmknn.py
